[gd_scene load_steps=12 format=3 uid="uid://deik5xqc7hnib"]

[ext_resource type="Texture2D" uid="uid://co5hjivg3e8ua" path="res://assets/images/boy.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://gvpfkslkmj8j" path="res://scenes/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://b1c5bywv41vrx" path="res://assets/images/cristal.png" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://qf4pjbsdorbf" path="res://scenes/flashlight.gd" id="3_qlg0r"]
[ext_resource type="Shader" uid="uid://4geb5ow36clx" path="res://shared/shaders/glow.gdshader" id="4_dqkch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(110, 156)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qlg0r"]
shader = ExtResource("4_dqkch")
shader_parameter/glow_color = Color(0.726063, 0.427715, 0.00643893, 1)
shader_parameter/glow_power = 2.0
shader_parameter/glow_radius = 1.0
shader_parameter/glow_shift = 1.0
shader_parameter/blink_speed = 3.0
shader_parameter/blink_min = 0.5
shader_parameter/blink_max = 1.0

[sub_resource type="Gradient" id="Gradient_tuyoq"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fjrip"]
gradient = SubResource("Gradient_tuyoq")
fill = 1
fill_from = Vector2(0.46789, 0.442661)
fill_to = Vector2(0.747706, 0.364679)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(275, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(51, 36)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 7)
shape = SubResource("RectangleShape2D_qhqgy")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Body" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Body"]
position = Vector2(-1, 0)
scale = Vector2(0.264552, 0.207275)
texture = ExtResource("1_3vyb7")

[node name="Flashlight" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_qlg0r")

[node name="Sprite2D" type="Sprite2D" parent="Body/Flashlight"]
modulate = Color(1, 1, 0.00784314, 1)
position = Vector2(90, 18)
rotation = -1.56964
scale = Vector2(0.167983, 0.125876)
texture = ExtResource("3_qhqgy")

[node name="Sprite2D2" type="Sprite2D" parent="Body/Flashlight"]
material = SubResource("ShaderMaterial_qlg0r")
position = Vector2(303, 21)
scale = Vector2(9.42188, 3.14376)
texture = SubResource("GradientTexture2D_fjrip")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Flashlight"]
position = Vector2(257.5, 5)
shape = SubResource("RectangleShape2D_dqkch")
debug_color = Color(0.963377, 2.59906e-06, 0.499073, 0.42)

[node name="LadderDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderDetector"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_g2els")
debug_color = Color(3.36915e-07, 0.621781, 0.551521, 0.42)

[node name="LadderLeftTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="LadderDetector" to="." method="_on_ladder_detector_body_entered"]
[connection signal="body_exited" from="LadderDetector" to="." method="_on_ladder_detector_body_exited"]
[connection signal="timeout" from="LadderLeftTimer" to="." method="_on_ladder_left_timer_timeout"]
